Fix overflow issues in ProjectPanel
The image in the ProjectPanel component was overflowing its grid row
in the vertical axis when the width of the image is set to 100% of that
row. Wrapping the image element inside a container and setting the
overflow property of that container to 'hidden' has fixed the issue.

--- a/src/features/ProjectList/components/ProjectPanel/ProjectPanel.module.css
+++ b/src/features/ProjectList/components/ProjectPanel/ProjectPanel.module.css
@@ -22,11 +22,20 @@
     transform: scale(102%);
 }
 
-.image {
-    min-width: 100%;
-    height: 100%;
+.image-container {
+    overflow: hidden;
+}
 
-    background-color: lightblue;
+.image {
+    width: 100%;
+    min-height: 100%;
+
+    overflow: hidden;
+
+    transition: transform 0.18s ease-in-out 0s;
+}
+.container:hover .image {
+    transform: scale(104%);
 }
 
 .name {
